// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/SearchField Defaults play-test 1`] = `
<div data-test-block="true">
  <div id="searchField-:rh:"
       class="_topContainer_2ptm8_13"
  >
    <label id="searchField-:rh:-label"
           class="_label_348na_5  _srOnly_348na_18"
           for="searchField-:rh:-input"
    >
      Hva leter du etter?
    </label>
    <div class="_searchContainer_2ptm8_5">
      <div class="_inputWrapper_2ptm8_47">
        <span id="searchField-:rh:-srFocus"
              class="_srOnly_2ptm8_190"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:rh:-input"
               class="_input_2ptm8_47"
               autocomplete="off"
               aria-describedby="searchField-:rh:-srFocus"
               type="search"
        >
        <span aria-live="assertive"
              class="_srOnly_2ptm8_190"
        >
        </span>
      </div>
      <button class="_searchButton_2ptm8_109">
        <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10 _icon_2ptm8_128"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:rk:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:rk:">
            Søk
          </title>
          <path d="M9.5 3A6.5 6.5 0 0 1 16 9.5c0 1.61-.59 3.09-1.56 4.23l.27.27h.79l5 5-1.5 1.5-5-5v-.79l-.27-.27A6.516 6.516 0 0 1 9.5 16a6.5 6.5 0 1 1 0-13Zm0 2C7 5 5 7 5 9.5S7 14 9.5 14 14 12 14 9.5 12 5 9.5 5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="searchFieldErrorId-:ri:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/SearchField WithAccesskey play-test 1`] = `
<div data-test-block="true">
  <div id="searchField-:r2s:"
       class="_topContainer_2ptm8_13"
  >
    <label id="searchField-:r2s:-label"
           class="_label_348na_5  _srOnly_348na_18"
           for="searchField-:r2s:-input"
    >
      Hva leter du etter?
    </label>
    <div class="_searchContainer_2ptm8_5">
      <div class="_inputWrapper_2ptm8_47">
        <span id="searchField-:r2s:-srFocus"
              class="_srOnly_2ptm8_190"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:r2s:-input"
               class="_input_2ptm8_47"
               accesskey="j"
               autocomplete="off"
               aria-describedby="searchField-:r2s:-srFocus"
               type="search"
        >
        <span aria-live="assertive"
              class="_srOnly_2ptm8_190"
        >
        </span>
      </div>
      <button class="_searchButton_2ptm8_109">
        <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10 _icon_2ptm8_128"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r2v:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r2v:">
            Søk
          </title>
          <path d="M9.5 3A6.5 6.5 0 0 1 16 9.5c0 1.61-.59 3.09-1.56 4.23l.27.27h.79l5 5-1.5 1.5-5-5v-.79l-.27-.27A6.516 6.516 0 0 1 9.5 16a6.5 6.5 0 1 1 0-13Zm0 2C7 5 5 7 5 9.5S7 14 9.5 14 14 12 14 9.5 12 5 9.5 5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="searchFieldErrorId-:r2t:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/SearchField WithArrowKeyNavigation play-test 1`] = `
<div data-test-block="true">
  <div id="searchField-:r2o:"
       class="_topContainer_2ptm8_13"
  >
    <label id="searchField-:r2o:-label"
           class="_label_348na_5  _srOnly_348na_18"
           for="searchField-:r2o:-input"
    >
      Hva leter du etter?
    </label>
    <div class="_searchContainer_2ptm8_5">
      <div class="_inputWrapper_2ptm8_47">
        <span id="searchField-:r2o:-srFocus"
              class="_srOnly_2ptm8_190"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:r2o:-input"
               class="_input_2ptm8_47"
               autocomplete="off"
               aria-describedby="searchField-:r2o:-srFocus"
               type="search"
               aria-owns="searchField-:r2o:-results"
        >
        <span aria-live="assertive"
              class="_srOnly_2ptm8_190"
        >
          5 forslag vises.
        </span>
        <div>
          <ul id="searchField-:r2o:-results"
              class="_searchResultContainer_2ptm8_177"
              role="listbox"
              aria-labelledby="searchField-:r2o:-label"
          >
            <li class="_searchResult_17xft_1"
                tabindex="-1"
                role="option"
                aria-selected="false"
            >
              <div class="_searchResultTitle_17xft_28">
              </div>
              Hydrogen
            </li>
            <li class="_searchResult_17xft_1"
                tabindex="-1"
                role="option"
                aria-selected="false"
            >
              <div class="_searchResultTitle_17xft_28">
              </div>
              Helium
            </li>
            <li class="_searchResult_17xft_1"
                tabindex="-1"
                role="option"
                aria-selected="false"
            >
              <div class="_searchResultTitle_17xft_28">
              </div>
              Litium
            </li>
            <li class="_searchResult_17xft_1"
                tabindex="-1"
                role="option"
                aria-selected="false"
            >
              <div class="_searchResultTitle_17xft_28">
              </div>
              Beryllium
            </li>
            <li class="_searchResult_17xft_1"
                tabindex="0"
                role="option"
                aria-selected="true"
            >
              <div class="_searchResultTitle_17xft_28">
              </div>
              Bor
            </li>
          </ul>
        </div>
      </div>
      <button class="_searchButton_2ptm8_109">
        <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10 _icon_2ptm8_128"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r2r:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r2r:">
            Søk
          </title>
          <path d="M9.5 3A6.5 6.5 0 0 1 16 9.5c0 1.61-.59 3.09-1.56 4.23l.27.27h.79l5 5-1.5 1.5-5-5v-.79l-.27-.27A6.516 6.516 0 0 1 9.5 16a6.5 6.5 0 1 1 0-13Zm0 2C7 5 5 7 5 9.5S7 14 9.5 14 14 12 14 9.5 12 5 9.5 5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="searchFieldErrorId-:r2p:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/SearchField WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div id="htmlid"
       class="_topContainer_2ptm8_13   dummyClassname"
       lang="nb"
  >
    <label id="htmlid-label"
           class="_label_348na_5"
           for="htmlid-input"
    >
      Hva leter du etter?
    </label>
    <div class="_searchContainer_2ptm8_5 _searchContainerMarginTop_2ptm8_9">
      <div class="_inputWrapper_2ptm8_47">
        <span id="htmlid-srFocus"
              class="_srOnly_2ptm8_190"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="htmlid-input"
               class="_input_2ptm8_47"
               data-testid="123ID"
               form="123form"
               autocomplete="off"
               aria-describedby="htmlid-srFocus"
               type="search"
        >
        <span aria-live="assertive"
              class="_srOnly_2ptm8_190"
        >
        </span>
      </div>
      <button class="_searchButton_2ptm8_109">
        <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10 _icon_2ptm8_128"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r7:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r7:">
            Søk
          </title>
          <path d="M9.5 3A6.5 6.5 0 0 1 16 9.5c0 1.61-.59 3.09-1.56 4.23l.27.27h.79l5 5-1.5 1.5-5-5v-.79l-.27-.27A6.516 6.516 0 0 1 9.5 16a6.5 6.5 0 1 1 0-13Zm0 2C7 5 5 7 5 9.5S7 14 9.5 14 14 12 14 9.5 12 5 9.5 5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="searchFieldErrorId-:r5:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/SearchField WithCustomButtonTitleText play-test 1`] = `
<div data-test-block="true">
  <div id="searchField-:r2g:"
       class="_topContainer_2ptm8_13"
  >
    <label id="searchField-:r2g:-label"
           class="_label_348na_5  _srOnly_348na_18"
           for="searchField-:r2g:-input"
    >
      Hva leter du etter?
    </label>
    <div class="_searchContainer_2ptm8_5">
      <div class="_inputWrapper_2ptm8_47">
        <span id="searchField-:r2g:-srFocus"
              class="_srOnly_2ptm8_190"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:r2g:-input"
               class="_input_2ptm8_47"
               autocomplete="off"
               aria-describedby="searchField-:r2g:-srFocus"
               type="search"
        >
        <span aria-live="assertive"
              class="_srOnly_2ptm8_190"
        >
        </span>
      </div>
      <button class="_searchButton_2ptm8_109">
        search test
      </button>
    </div>
    <div id="searchFieldErrorId-:r2h:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/SearchField WithCustomButtonTitles play-test 1`] = `
<div data-test-block="true">
  <div id="searchField-:r2b:"
       class="_topContainer_2ptm8_13"
  >
    <label id="searchField-:r2b:-label"
           class="_label_348na_5  _srOnly_348na_18"
           for="searchField-:r2b:-input"
    >
      Hva leter du etter?
    </label>
    <div class="_searchContainer_2ptm8_5">
      <div class="_inputWrapper_2ptm8_47">
        <span id="searchField-:r2b:-srFocus"
              class="_srOnly_2ptm8_190"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:r2b:-input"
               class="_input_2ptm8_47  _inputWithValue_2ptm8_74"
               autocomplete="off"
               aria-describedby="searchField-:r2b:-srFocus"
               type="search"
               value="skattekort"
        >
        <span aria-live="assertive"
              class="_srOnly_2ptm8_190"
        >
        </span>
        <button class="_button_19ayz_1 _button_extraSmall_19ayz_34  _clearButton_2ptm8_40"
                data-brightness="default"
                type="reset"
        >
          <svg class="_systemIcon_dry7n_2 _systemIcon_small_dry7n_5 _icon_19ayz_26"
               viewbox="0 0 24 24"
               focusable="false"
               aria-labelledby="svgtitle-:r2e:"
               aria-hidden="false"
               role="img"
          >
            <title id="svgtitle-:r2e:">
              clear test
            </title>
            <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
            </path>
          </svg>
        </button>
      </div>
      <button class="_searchButton_2ptm8_109">
        <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10 _icon_2ptm8_128"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r2f:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r2f:">
            search test
          </title>
          <path d="M9.5 3A6.5 6.5 0 0 1 16 9.5c0 1.61-.59 3.09-1.56 4.23l.27.27h.79l5 5-1.5 1.5-5-5v-.79l-.27-.27A6.516 6.516 0 0 1 9.5 16a6.5 6.5 0 1 1 0-13Zm0 2C7 5 5 7 5 9.5S7 14 9.5 14 14 12 14 9.5 12 5 9.5 5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="searchFieldErrorId-:r2c:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/SearchField WithCustomClassNames play-test 1`] = `
<div data-test-block="true">
  <div id="searchField-:r8:"
       class="_topContainer_2ptm8_13    dummyClassname"
  >
    <label id="searchField-:r8:-label"
           class="_label_348na_5    dummyClassname"
           for="searchField-:r8:-input"
    >
      Leter du etter en LAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAANG gjenstand?
    </label>
    <div class="_searchContainer_2ptm8_5 _searchContainerMarginTop_2ptm8_9
dummyClassnameFormContainer">
      <div class="_inputWrapper_2ptm8_47">
        <span id="searchField-:r8:-srFocus"
              class="_srOnly_2ptm8_190"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:r8:-input"
               class="_input_2ptm8_47"
               autocomplete="off"
               aria-describedby="searchField-:r8:-srFocus"
               type="search"
        >
        <span aria-live="assertive"
              class="_srOnly_2ptm8_190"
        >
        </span>
      </div>
      <button class="_searchButton_2ptm8_109">
        <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10 _icon_2ptm8_128"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:rb:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:rb:">
            Søk
          </title>
          <path d="M9.5 3A6.5 6.5 0 0 1 16 9.5c0 1.61-.59 3.09-1.56 4.23l.27.27h.79l5 5-1.5 1.5-5-5v-.79l-.27-.27A6.516 6.516 0 0 1 9.5 16a6.5 6.5 0 1 1 0-13Zm0 2C7 5 5 7 5 9.5S7 14 9.5 14 14 12 14 9.5 12 5 9.5 5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="searchFieldErrorId-:r9:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/SearchField WithDefaultValue play-test 1`] = `
<div data-test-block="true">
  <div id="searchField-:r1o:"
       class="_topContainer_2ptm8_13"
  >
    <label id="searchField-:r1o:-label"
           class="_label_348na_5  _srOnly_348na_18"
           for="searchField-:r1o:-input"
    >
      Hva leter du etter?
    </label>
    <div class="_searchContainer_2ptm8_5">
      <div class="_inputWrapper_2ptm8_47">
        <span id="searchField-:r1o:-srFocus"
              class="_srOnly_2ptm8_190"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:r1o:-input"
               class="_input_2ptm8_47  _inputWithValue_2ptm8_74"
               autocomplete="off"
               aria-describedby="searchField-:r1o:-srFocus"
               type="search"
               value="skattekort"
        >
        <span aria-live="assertive"
              class="_srOnly_2ptm8_190"
        >
        </span>
        <button class="_button_19ayz_1 _button_extraSmall_19ayz_34  _clearButton_2ptm8_40"
                data-brightness="default"
                type="reset"
        >
          <svg class="_systemIcon_dry7n_2 _systemIcon_small_dry7n_5 _icon_19ayz_26"
               viewbox="0 0 24 24"
               focusable="false"
               aria-labelledby="svgtitle-:r1r:"
               aria-hidden="false"
               role="img"
          >
            <title id="svgtitle-:r1r:">
              Nullstill
            </title>
            <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
            </path>
          </svg>
        </button>
      </div>
      <button class="_searchButton_2ptm8_109">
        <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10 _icon_2ptm8_128"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r1s:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r1s:">
            Søk
          </title>
          <path d="M9.5 3A6.5 6.5 0 0 1 16 9.5c0 1.61-.59 3.09-1.56 4.23l.27.27h.79l5 5-1.5 1.5-5-5v-.79l-.27-.27A6.516 6.516 0 0 1 9.5 16a6.5 6.5 0 1 1 0-13Zm0 2C7 5 5 7 5 9.5S7 14 9.5 14 14 12 14 9.5 12 5 9.5 5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="searchFieldErrorId-:r1p:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/SearchField WithDescription play-test 1`] = `
<div data-test-block="true">
  <div id="searchField-:r1t:"
       class="_topContainer_2ptm8_13"
  >
    <label id="searchField-:r1t:-label"
           class="_label_348na_5"
           for="searchField-:r1t:-input"
    >
      Hva leter du etter?
    </label>
    <div class="_description_10ldw_17">
      En liten beskrivelse tekst
    </div>
    <div class="_searchContainer_2ptm8_5 _searchContainerMarginTop_2ptm8_9">
      <div class="_inputWrapper_2ptm8_47">
        <span id="searchField-:r1t:-srFocus"
              class="_srOnly_2ptm8_190"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:r1t:-input"
               class="_input_2ptm8_47"
               autocomplete="off"
               aria-describedby="searchField-:r1t:-srFocus"
               type="search"
        >
        <span aria-live="assertive"
              class="_srOnly_2ptm8_190"
        >
        </span>
      </div>
      <button class="_searchButton_2ptm8_109">
        <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10 _icon_2ptm8_128"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r20:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r20:">
            Søk
          </title>
          <path d="M9.5 3A6.5 6.5 0 0 1 16 9.5c0 1.61-.59 3.09-1.56 4.23l.27.27h.79l5 5-1.5 1.5-5-5v-.79l-.27-.27A6.516 6.516 0 0 1 9.5 16a6.5 6.5 0 1 1 0-13Zm0 2C7 5 5 7 5 9.5S7 14 9.5 14 14 12 14 9.5 12 5 9.5 5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="searchFieldErrorId-:r1u:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/SearchField WithDisabled play-test 1`] = `
<div data-test-block="true">
  <div id="searchField-:r1f:"
       class="_topContainer_2ptm8_13"
  >
    <label id="searchField-:r1f:-label"
           class="_label_348na_5  _srOnly_348na_18"
           for="searchField-:r1f:-input"
    >
      Hva leter du etter?
    </label>
    <div class="_searchContainer_2ptm8_5">
      <div class="_inputWrapper_2ptm8_47">
        <span id="searchField-:r1f:-srFocus"
              class="_srOnly_2ptm8_190"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:r1f:-input"
               class="_input_2ptm8_47"
               disabled
               autocomplete="off"
               aria-describedby="searchField-:r1f:-srFocus"
               type="search"
               value="En lang tekst som ikke skal synes bak reset-ikonet"
        >
        <span aria-live="assertive"
              class="_srOnly_2ptm8_190"
        >
        </span>
      </div>
      <button class="_searchButton_2ptm8_109"
              disabled
      >
        <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10 _icon_2ptm8_128"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r1i:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r1i:">
            Søk
          </title>
          <path d="M9.5 3A6.5 6.5 0 0 1 16 9.5c0 1.61-.59 3.09-1.56 4.23l.27.27h.79l5 5-1.5 1.5-5-5v-.79l-.27-.27A6.516 6.516 0 0 1 9.5 16a6.5 6.5 0 1 1 0-13Zm0 2C7 5 5 7 5 9.5S7 14 9.5 14 14 12 14 9.5 12 5 9.5 5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="searchFieldErrorId-:r1g:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/SearchField WithErrorMessage play-test 1`] = `
<div data-test-block="true">
  <div id="searchField-:r3j:"
       class="_topContainer_2ptm8_13"
  >
    <label id="searchField-:r3j:-label"
           class="_label_348na_5  _srOnly_348na_18"
           for="searchField-:r3j:-input"
    >
      Hva leter du etter?
    </label>
    <div class="_searchContainer_2ptm8_5">
      <div class="_inputWrapper_2ptm8_47">
        <span id="searchField-:r3j:-srFocus"
              class="_srOnly_2ptm8_190"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:r3j:-input"
               class="_input_2ptm8_47"
               autocomplete="off"
               aria-describedby="searchFieldErrorId-:r3k: searchField-:r3j:-srFocus"
               aria-invalid="true"
               type="search"
        >
        <span aria-live="assertive"
              class="_srOnly_2ptm8_190"
        >
        </span>
      </div>
      <button class="_searchButton_2ptm8_109">
        <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10 _icon_2ptm8_128"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r3m:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r3m:">
            Søk
          </title>
          <path d="M9.5 3A6.5 6.5 0 0 1 16 9.5c0 1.61-.59 3.09-1.56 4.23l.27.27h.79l5 5-1.5 1.5-5-5v-.79l-.27-.27A6.516 6.516 0 0 1 9.5 16a6.5 6.5 0 1 1 0-13Zm0 2C7 5 5 7 5 9.5S7 14 9.5 14 14 12 14 9.5 12 5 9.5 5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="searchFieldErrorId-:r3k:"
         aria-live="assertive"
         aria-atomic="true"
    >
      <div class="_errorMessage_vog41_15">
        <svg class="_systemIcon_dry7n_2 _systemIcon_small_dry7n_5 _errorMessageIcon_vog41_25"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
          </path>
        </svg>
        <p class="_errorMessageText_vog41_29">
          Søkefeltet er obligatorisk
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/SearchField WithEventHandlers play-test 1`] = `
<div data-test-block="true">
  <div id="searchField-:r2j:"
       class="_topContainer_2ptm8_13"
  >
    <label id="searchField-:r2j:-label"
           class="_label_348na_5  _srOnly_348na_18"
           for="searchField-:r2j:-input"
    >
      Søk har blitt aktivert med enter
    </label>
    <div class="_searchContainer_2ptm8_5">
      <div class="_inputWrapper_2ptm8_47">
        <span id="searchField-:r2j:-srFocus"
              class="_srOnly_2ptm8_190"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:r2j:-input"
               class="_input_2ptm8_47"
               autocomplete="off"
               aria-describedby="searchField-:r2j:-srFocus"
               type="search"
        >
        <span aria-live="assertive"
              class="_srOnly_2ptm8_190"
        >
        </span>
      </div>
      <button class="_searchButton_2ptm8_109">
        <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10 _icon_2ptm8_128"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r2m:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r2m:">
            Søk
          </title>
          <path d="M9.5 3A6.5 6.5 0 0 1 16 9.5c0 1.61-.59 3.09-1.56 4.23l.27.27h.79l5 5-1.5 1.5-5-5v-.79l-.27-.27A6.516 6.516 0 0 1 9.5 16a6.5 6.5 0 1 1 0-13Zm0 2C7 5 5 7 5 9.5S7 14 9.5 14 14 12 14 9.5 12 5 9.5 5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="searchFieldErrorId-:r2k:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/SearchField WithHelpText play-test 1`] = `
<div data-test-block="true">
  <div id="searchField-:r21:"
       class="_topContainer_2ptm8_13"
  >
    <label id="searchField-:r21:-label"
           class="_label_348na_5"
           for="searchField-:r21:-input"
    >
      Hva leter du etter?
    </label>
    <button class="_button_19ayz_1 _button_extraSmall_19ayz_34 _button_outlined_19ayz_98 _helpButton_10ldw_27"
            data-brightness="default"
            type="button"
            aria-describedby="searchField-:r21:-label"
            aria-expanded="true"
    >
      <svg class="_systemIcon_dry7n_2 _systemIcon_small_dry7n_5 _icon_19ayz_26"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r24:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r24:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div class="_helpBox_10ldw_31">
      <div class="_helpBoxText_10ldw_44">
        Hjelpetekst
      </div>
      <button class="_button_19ayz_1 _button_small_19ayz_38  _helpBoxCloseButton_10ldw_51"
              data-brightness="default"
              type="button"
      >
        <svg class="_systemIcon_dry7n_2 _systemIcon_small_dry7n_5 _icon_19ayz_26"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r26:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r26:">
            Lukk
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
    </div>
    <div class="_searchContainer_2ptm8_5 _searchContainerMarginTop_2ptm8_9">
      <div class="_inputWrapper_2ptm8_47">
        <span id="searchField-:r21:-srFocus"
              class="_srOnly_2ptm8_190"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:r21:-input"
               class="_input_2ptm8_47"
               autocomplete="off"
               aria-describedby="searchField-:r21:-srFocus"
               type="search"
        >
        <span aria-live="assertive"
              class="_srOnly_2ptm8_190"
        >
        </span>
      </div>
      <button class="_searchButton_2ptm8_109">
        <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10 _icon_2ptm8_128"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r25:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r25:">
            Søk
          </title>
          <path d="M9.5 3A6.5 6.5 0 0 1 16 9.5c0 1.61-.59 3.09-1.56 4.23l.27.27h.79l5 5-1.5 1.5-5-5v-.79l-.27-.27A6.516 6.516 0 0 1 9.5 16a6.5 6.5 0 1 1 0-13Zm0 2C7 5 5 7 5 9.5S7 14 9.5 14 14 12 14 9.5 12 5 9.5 5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="searchFieldErrorId-:r22:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/SearchField WithHelpToggleEvent smoke-test 1`] = `
<div data-test-block="true">
  <div id="searchField-:r30:"
       class="_topContainer_2ptm8_13"
  >
    <label id="searchField-:r30:-label"
           class="_label_348na_5"
           for="searchField-:r30:-input"
    >
      Hva leter du etter?
    </label>
    <button class="_button_19ayz_1 _button_extraSmall_19ayz_34 _button_outlined_19ayz_98 _helpButton_10ldw_27"
            data-brightness="default"
            type="button"
            aria-describedby="searchField-:r30:-label"
            aria-expanded="false"
    >
      <svg class="_systemIcon_dry7n_2 _systemIcon_small_dry7n_5 _icon_19ayz_26"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r33:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r33:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div class="_searchContainer_2ptm8_5 _searchContainerMarginTop_2ptm8_9">
      <div class="_inputWrapper_2ptm8_47">
        <span id="searchField-:r30:-srFocus"
              class="_srOnly_2ptm8_190"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:r30:-input"
               class="_input_2ptm8_47"
               autocomplete="off"
               aria-describedby="searchField-:r30:-srFocus"
               type="search"
        >
        <span aria-live="assertive"
              class="_srOnly_2ptm8_190"
        >
        </span>
      </div>
      <button class="_searchButton_2ptm8_109">
        <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10 _icon_2ptm8_128"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r34:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r34:">
            Søk
          </title>
          <path d="M9.5 3A6.5 6.5 0 0 1 16 9.5c0 1.61-.59 3.09-1.56 4.23l.27.27h.79l5 5-1.5 1.5-5-5v-.79l-.27-.27A6.516 6.516 0 0 1 9.5 16a6.5 6.5 0 1 1 0-13Zm0 2C7 5 5 7 5 9.5S7 14 9.5 14 14 12 14 9.5 12 5 9.5 5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="searchFieldErrorId-:r31:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/SearchField WithLongInput smoke-test 1`] = `
<div data-test-block="true">
  <div id="searchField-:r3s:"
       class="_topContainer_2ptm8_13"
  >
    <label id="searchField-:r3s:-label"
           class="_label_348na_5  _srOnly_348na_18"
           for="searchField-:r3s:-input"
    >
      Hva leter du etter?
    </label>
    <div class="_searchContainer_2ptm8_5">
      <div class="_inputWrapper_2ptm8_47">
        <span id="searchField-:r3s:-srFocus"
              class="_srOnly_2ptm8_190"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:r3s:-input"
               class="_input_2ptm8_47  _inputWithValue_2ptm8_74"
               autocomplete="off"
               aria-describedby="searchField-:r3s:-srFocus"
               type="search"
               value="En lang value som ikke skal synes bak reset-ikonet"
        >
        <span aria-live="assertive"
              class="_srOnly_2ptm8_190"
        >
        </span>
        <button class="_button_19ayz_1 _button_extraSmall_19ayz_34  _clearButton_2ptm8_40"
                data-brightness="default"
                type="reset"
        >
          <svg class="_systemIcon_dry7n_2 _systemIcon_small_dry7n_5 _icon_19ayz_26"
               viewbox="0 0 24 24"
               focusable="false"
               aria-labelledby="svgtitle-:r3v:"
               aria-hidden="false"
               role="img"
          >
            <title id="svgtitle-:r3v:">
              Nullstill
            </title>
            <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
            </path>
          </svg>
        </button>
      </div>
      <button class="_searchButton_2ptm8_109">
        <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10 _icon_2ptm8_128"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r40:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r40:">
            Søk
          </title>
          <path d="M9.5 3A6.5 6.5 0 0 1 16 9.5c0 1.61-.59 3.09-1.56 4.23l.27.27h.79l5 5-1.5 1.5-5-5v-.79l-.27-.27A6.516 6.516 0 0 1 9.5 16a6.5 6.5 0 1 1 0-13Zm0 2C7 5 5 7 5 9.5S7 14 9.5 14 14 12 14 9.5 12 5 9.5 5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="searchFieldErrorId-:r3t:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/SearchField WithLongLabel smoke-test 1`] = `
<div data-test-block="true">
  <div id="searchField-:rc:"
       class="_topContainer_2ptm8_13"
  >
    <label id="searchField-:rc:-label"
           class="_label_348na_5"
           for="searchField-:rc:-input"
    >
      Leter du etter en LAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAANG gjenstand?
    </label>
    <button class="_button_19ayz_1 _button_extraSmall_19ayz_34 _button_outlined_19ayz_98 _helpButton_10ldw_27"
            data-brightness="default"
            type="button"
            aria-describedby="searchField-:rc:-label"
            aria-expanded="false"
    >
      <svg class="_systemIcon_dry7n_2 _systemIcon_small_dry7n_5 _icon_19ayz_26"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:rf:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:rf:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div class="_description_10ldw_17">
      Med en LAAAAAAAAAAAAAAAAAAAAAAAAAAAAANG beskrivelse?
    </div>
    <div class="_searchContainer_2ptm8_5 _searchContainerMarginTop_2ptm8_9">
      <div class="_inputWrapper_2ptm8_47">
        <span id="searchField-:rc:-srFocus"
              class="_srOnly_2ptm8_190"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:rc:-input"
               class="_input_2ptm8_47"
               autocomplete="off"
               aria-describedby="searchField-:rc:-srFocus"
               type="search"
        >
        <span aria-live="assertive"
              class="_srOnly_2ptm8_190"
        >
        </span>
      </div>
      <button class="_searchButton_2ptm8_109">
        <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10 _icon_2ptm8_128"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:rg:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:rg:">
            Søk
          </title>
          <path d="M9.5 3A6.5 6.5 0 0 1 16 9.5c0 1.61-.59 3.09-1.56 4.23l.27.27h.79l5 5-1.5 1.5-5-5v-.79l-.27-.27A6.516 6.516 0 0 1 9.5 16a6.5 6.5 0 1 1 0-13Zm0 2C7 5 5 7 5 9.5S7 14 9.5 14 14 12 14 9.5 12 5 9.5 5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="searchFieldErrorId-:rd:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/SearchField WithLongPlaceholder smoke-test 1`] = `
<div data-test-block="true">
  <div id="searchField-:r3o:"
       class="_topContainer_2ptm8_13"
  >
    <label id="searchField-:r3o:-label"
           class="_label_348na_5  _srOnly_348na_18"
           for="searchField-:r3o:-input"
    >
      Hva leter du etter?
    </label>
    <div class="_searchContainer_2ptm8_5">
      <div class="_inputWrapper_2ptm8_47">
        <span id="searchField-:r3o:-srFocus"
              class="_srOnly_2ptm8_190"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:r3o:-input"
               class="_input_2ptm8_47"
               placeholder="En lang placeholder som ikke skal synes bak reset-ikonet"
               autocomplete="off"
               aria-describedby="searchField-:r3o:-srFocus"
               type="search"
        >
        <span aria-live="assertive"
              class="_srOnly_2ptm8_190"
        >
        </span>
      </div>
      <button class="_searchButton_2ptm8_109">
        <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10 _icon_2ptm8_128"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r3r:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r3r:">
            Søk
          </title>
          <path d="M9.5 3A6.5 6.5 0 0 1 16 9.5c0 1.61-.59 3.09-1.56 4.23l.27.27h.79l5 5-1.5 1.5-5-5v-.79l-.27-.27A6.516 6.516 0 0 1 9.5 16a6.5 6.5 0 1 1 0-13Zm0 2C7 5 5 7 5 9.5S7 14 9.5 14 14 12 14 9.5 12 5 9.5 5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="searchFieldErrorId-:r3p:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/SearchField WithNameAndPlaceholder play-test 1`] = `
<div data-test-block="true">
  <div id="searchField-:r27:"
       class="_topContainer_2ptm8_13"
  >
    <label id="searchField-:r27:-label"
           class="_label_348na_5  _srOnly_348na_18"
           for="searchField-:r27:-input"
    >
      Hva leter du etter?
    </label>
    <div class="_searchContainer_2ptm8_5">
      <div class="_inputWrapper_2ptm8_47">
        <span id="searchField-:r27:-srFocus"
              class="_srOnly_2ptm8_190"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:r27:-input"
               class="_input_2ptm8_47"
               placeholder="skattekort"
               autocomplete="off"
               aria-describedby="searchField-:r27:-srFocus"
               type="search"
               name="test_name"
        >
        <span aria-live="assertive"
              class="_srOnly_2ptm8_190"
        >
        </span>
      </div>
      <button class="_searchButton_2ptm8_109">
        <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10 _icon_2ptm8_128"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r2a:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r2a:">
            Søk
          </title>
          <path d="M9.5 3A6.5 6.5 0 0 1 16 9.5c0 1.61-.59 3.09-1.56 4.23l.27.27h.79l5 5-1.5 1.5-5-5v-.79l-.27-.27A6.516 6.516 0 0 1 9.5 16a6.5 6.5 0 1 1 0-13Zm0 2C7 5 5 7 5 9.5S7 14 9.5 14 14 12 14 9.5 12 5 9.5 5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="searchFieldErrorId-:r28:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/SearchField WithRef play-test 1`] = `
<div data-test-block="true">
  <div id="searchField-:r0:"
       class="_topContainer_2ptm8_13"
  >
    <label id="searchField-:r0:-label"
           class="_label_348na_5  _srOnly_348na_18"
           for="searchField-:r0:-input"
    >
      Hva leter du etter?
    </label>
    <div class="_searchContainer_2ptm8_5">
      <div class="_inputWrapper_2ptm8_47">
        <span id="searchField-:r0:-srFocus"
              class="_srOnly_2ptm8_190"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:r0:-input"
               class="_input_2ptm8_47"
               autocomplete="off"
               aria-describedby="searchField-:r0:-srFocus"
               type="search"
               name="dummyNameForwardedFromRef"
        >
        <span aria-live="assertive"
              class="_srOnly_2ptm8_190"
        >
        </span>
      </div>
      <button class="_searchButton_2ptm8_109">
        <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10 _icon_2ptm8_128"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r3:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r3:">
            Søk
          </title>
          <path d="M9.5 3A6.5 6.5 0 0 1 16 9.5c0 1.61-.59 3.09-1.56 4.23l.27.27h.79l5 5-1.5 1.5-5-5v-.79l-.27-.27A6.516 6.516 0 0 1 9.5 16a6.5 6.5 0 1 1 0-13Zm0 2C7 5 5 7 5 9.5S7 14 9.5 14 14 12 14 9.5 12 5 9.5 5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="searchFieldErrorId-:r1:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/SearchField WithRequired play-test 1`] = `
<div data-test-block="true">
  <div id="searchField-:r3b:"
       class="_topContainer_2ptm8_13"
  >
    <label id="searchField-:r3b:-label"
           class="_label_348na_5  _srOnly_348na_18"
           for="searchField-:r3b:-input"
    >
      Hva leter du etter?
    </label>
    <div class="_searchContainer_2ptm8_5">
      <div class="_inputWrapper_2ptm8_47">
        <span id="searchField-:r3b:-srFocus"
              class="_srOnly_2ptm8_190"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:r3b:-input"
               class="_input_2ptm8_47"
               autocomplete="off"
               required
               aria-describedby="searchField-:r3b:-srFocus"
               type="search"
        >
        <span aria-live="assertive"
              class="_srOnly_2ptm8_190"
        >
        </span>
      </div>
      <button class="_searchButton_2ptm8_109">
        <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10 _icon_2ptm8_128"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r3e:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r3e:">
            Søk
          </title>
          <path d="M9.5 3A6.5 6.5 0 0 1 16 9.5c0 1.61-.59 3.09-1.56 4.23l.27.27h.79l5 5-1.5 1.5-5-5v-.79l-.27-.27A6.516 6.516 0 0 1 9.5 16a6.5 6.5 0 1 1 0-13Zm0 2C7 5 5 7 5 9.5S7 14 9.5 14 14 12 14 9.5 12 5 9.5 5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="searchFieldErrorId-:r3c:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/SearchField WithRequiredAndMark smoke-test 1`] = `
<div data-test-block="true">
  <div id="searchField-:r3f:"
       class="_topContainer_2ptm8_13"
  >
    <label id="searchField-:r3f:-label"
           class="_label_348na_5 _label_required_348na_12"
           for="searchField-:r3f:-input"
    >
      Hva leter du etter?
    </label>
    <div class="_searchContainer_2ptm8_5 _searchContainerMarginTop_2ptm8_9">
      <div class="_inputWrapper_2ptm8_47">
        <span id="searchField-:r3f:-srFocus"
              class="_srOnly_2ptm8_190"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:r3f:-input"
               class="_input_2ptm8_47"
               autocomplete="off"
               required
               aria-describedby="searchField-:r3f:-srFocus"
               type="search"
        >
        <span aria-live="assertive"
              class="_srOnly_2ptm8_190"
        >
        </span>
      </div>
      <button class="_searchButton_2ptm8_109">
        <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10 _icon_2ptm8_128"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r3i:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r3i:">
            Søk
          </title>
          <path d="M9.5 3A6.5 6.5 0 0 1 16 9.5c0 1.61-.59 3.09-1.56 4.23l.27.27h.79l5 5-1.5 1.5-5-5v-.79l-.27-.27A6.516 6.516 0 0 1 9.5 16a6.5 6.5 0 1 1 0-13Zm0 2C7 5 5 7 5 9.5S7 14 9.5 14 14 12 14 9.5 12 5 9.5 5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="searchFieldErrorId-:r3g:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/SearchField WithValue play-test 1`] = `
<div data-test-block="true">
  <div id="searchField-:r1j:"
       class="_topContainer_2ptm8_13"
  >
    <label id="searchField-:r1j:-label"
           class="_label_348na_5  _srOnly_348na_18"
           for="searchField-:r1j:-input"
    >
      Hva leter du etter?
    </label>
    <div class="_searchContainer_2ptm8_5">
      <div class="_inputWrapper_2ptm8_47">
        <span id="searchField-:r1j:-srFocus"
              class="_srOnly_2ptm8_190"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:r1j:-input"
               class="_input_2ptm8_47  _inputWithValue_2ptm8_74"
               autocomplete="off"
               aria-describedby="searchField-:r1j:-srFocus"
               type="search"
               value="skattekort"
        >
        <span aria-live="assertive"
              class="_srOnly_2ptm8_190"
        >
        </span>
        <button class="_button_19ayz_1 _button_extraSmall_19ayz_34  _clearButton_2ptm8_40"
                data-brightness="default"
                type="reset"
        >
          <svg class="_systemIcon_dry7n_2 _systemIcon_small_dry7n_5 _icon_19ayz_26"
               viewbox="0 0 24 24"
               focusable="false"
               aria-labelledby="svgtitle-:r1m:"
               aria-hidden="false"
               role="img"
          >
            <title id="svgtitle-:r1m:">
              Nullstill
            </title>
            <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
            </path>
          </svg>
        </button>
      </div>
      <button class="_searchButton_2ptm8_109">
        <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10 _icon_2ptm8_128"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r1n:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r1n:">
            Søk
          </title>
          <path d="M9.5 3A6.5 6.5 0 0 1 16 9.5c0 1.61-.59 3.09-1.56 4.23l.27.27h.79l5 5-1.5 1.5-5-5v-.79l-.27-.27A6.516 6.516 0 0 1 9.5 16a6.5 6.5 0 1 1 0-13Zm0 2C7 5 5 7 5 9.5S7 14 9.5 14 14 12 14 9.5 12 5 9.5 5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="searchFieldErrorId-:r1k:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/SearchField WithVariantLargeAndLongText smoke-test 1`] = `
<div data-test-block="true">
  <div id="searchField-:r1a:"
       class="_topContainer_2ptm8_13 _topContainer_large_2ptm8_23"
  >
    <label id="searchField-:r1a:-label"
           class="_label_348na_5  _srOnly_348na_18"
           for="searchField-:r1a:-input"
    >
      Hva leter du etter?
    </label>
    <div class="_searchContainer_2ptm8_5">
      <div class="_inputWrapper_2ptm8_47">
        <span id="searchField-:r1a:-srFocus"
              class="_srOnly_2ptm8_190"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:r1a:-input"
               class="_input_2ptm8_47  _inputWithValue_2ptm8_74"
               autocomplete="off"
               aria-describedby="searchField-:r1a:-srFocus"
               type="search"
               value="En lang tekst som ikke skal synes bak reset-ikonet"
        >
        <span aria-live="assertive"
              class="_srOnly_2ptm8_190"
        >
        </span>
        <button class="_button_19ayz_1 _button_small_19ayz_38  _clearButton_2ptm8_40"
                data-brightness="default"
                type="reset"
        >
          <svg class="_systemIcon_dry7n_2 _systemIcon_small_dry7n_5 _icon_19ayz_26"
               viewbox="0 0 24 24"
               focusable="false"
               aria-labelledby="svgtitle-:r1d:"
               aria-hidden="false"
               role="img"
          >
            <title id="svgtitle-:r1d:">
              Nullstill
            </title>
            <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
            </path>
          </svg>
        </button>
      </div>
      <button class="_searchButton_2ptm8_109 _searchButton_large_2ptm8_132">
        <svg class="_systemIcon_dry7n_2 _systemIcon_large_dry7n_15 _icon_2ptm8_128"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r1e:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r1e:">
            Søk
          </title>
          <path d="M9.5 3A6.5 6.5 0 0 1 16 9.5c0 1.61-.59 3.09-1.56 4.23l.27.27h.79l5 5-1.5 1.5-5-5v-.79l-.27-.27A6.516 6.516 0 0 1 9.5 16a6.5 6.5 0 1 1 0-13Zm0 2C7 5 5 7 5 9.5S7 14 9.5 14 14 12 14 9.5 12 5 9.5 5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="searchFieldErrorId-:r1b:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/SearchField WithVariants smoke-test 1`] = `
<div data-test-block="true">
  <div id="searchField-:rl:"
       class="_topContainer_2ptm8_13"
  >
    <label id="searchField-:rl:-label"
           class="_label_348na_5"
           for="searchField-:rl:-input"
    >
      Hva leter du etter?
    </label>
    <div class="_searchContainer_2ptm8_5 _searchContainerMarginTop_2ptm8_9">
      <div class="_inputWrapper_2ptm8_47">
        <span id="searchField-:rl:-srFocus"
              class="_srOnly_2ptm8_190"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:rl:-input"
               class="_input_2ptm8_47"
               autocomplete="off"
               aria-describedby="searchField-:rl:-srFocus"
               type="search"
        >
        <span aria-live="assertive"
              class="_srOnly_2ptm8_190"
        >
        </span>
      </div>
      <button class="_searchButton_2ptm8_109">
        <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10 _icon_2ptm8_128"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:ro:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:ro:">
            Søk
          </title>
          <path d="M9.5 3A6.5 6.5 0 0 1 16 9.5c0 1.61-.59 3.09-1.56 4.23l.27.27h.79l5 5-1.5 1.5-5-5v-.79l-.27-.27A6.516 6.516 0 0 1 9.5 16a6.5 6.5 0 1 1 0-13Zm0 2C7 5 5 7 5 9.5S7 14 9.5 14 14 12 14 9.5 12 5 9.5 5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="searchFieldErrorId-:rm:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
  <div id="searchField-:rp:"
       class="_topContainer_2ptm8_13 _topContainer_large_2ptm8_23"
  >
    <label id="searchField-:rp:-label"
           class="_label_348na_5"
           for="searchField-:rp:-input"
    >
      Hva leter du etter?
    </label>
    <div class="_searchContainer_2ptm8_5 _searchContainerMarginTop_2ptm8_9">
      <div class="_inputWrapper_2ptm8_47">
        <span id="searchField-:rp:-srFocus"
              class="_srOnly_2ptm8_190"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:rp:-input"
               class="_input_2ptm8_47"
               autocomplete="off"
               aria-describedby="searchField-:rp:-srFocus"
               type="search"
        >
        <span aria-live="assertive"
              class="_srOnly_2ptm8_190"
        >
        </span>
      </div>
      <button class="_searchButton_2ptm8_109 _searchButton_large_2ptm8_132">
        <svg class="_systemIcon_dry7n_2 _systemIcon_large_dry7n_15 _icon_2ptm8_128"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:rs:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:rs:">
            Søk
          </title>
          <path d="M9.5 3A6.5 6.5 0 0 1 16 9.5c0 1.61-.59 3.09-1.56 4.23l.27.27h.79l5 5-1.5 1.5-5-5v-.79l-.27-.27A6.516 6.516 0 0 1 9.5 16a6.5 6.5 0 1 1 0-13Zm0 2C7 5 5 7 5 9.5S7 14 9.5 14 14 12 14 9.5 12 5 9.5 5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="searchFieldErrorId-:rq:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
  <div id="searchField-:rt:"
       class="_topContainer_2ptm8_13  _topContainer_extraLarge_2ptm8_30"
  >
    <label id="searchField-:rt:-label"
           class="_label_348na_5"
           for="searchField-:rt:-input"
    >
      Hva leter du etter?
    </label>
    <div class="_searchContainer_2ptm8_5 _searchContainerMarginTop_2ptm8_9">
      <div class="_inputWrapper_2ptm8_47">
        <span id="searchField-:rt:-srFocus"
              class="_srOnly_2ptm8_190"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:rt:-input"
               class="_input_2ptm8_47"
               autocomplete="off"
               aria-describedby="searchField-:rt:-srFocus"
               type="search"
        >
        <span aria-live="assertive"
              class="_srOnly_2ptm8_190"
        >
        </span>
      </div>
      <button class="_searchButton_2ptm8_109  _searchButton_extraLarge_2ptm8_138">
        <svg class="_systemIcon_dry7n_2 _systemIcon_large_dry7n_15 _icon_2ptm8_128"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r10:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r10:">
            Søk
          </title>
          <path d="M9.5 3A6.5 6.5 0 0 1 16 9.5c0 1.61-.59 3.09-1.56 4.23l.27.27h.79l5 5-1.5 1.5-5-5v-.79l-.27-.27A6.516 6.516 0 0 1 9.5 16a6.5 6.5 0 1 1 0-13Zm0 2C7 5 5 7 5 9.5S7 14 9.5 14 14 12 14 9.5 12 5 9.5 5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="searchFieldErrorId-:ru:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/SearchField WithVariantsNoIcon smoke-test 1`] = `
<div data-test-block="true">
  <div id="searchField-:r11:"
       class="_topContainer_2ptm8_13"
  >
    <label id="searchField-:r11:-label"
           class="_label_348na_5  _srOnly_348na_18"
           for="searchField-:r11:-input"
    >
      Hva leter du etter?
    </label>
    <div class="_searchContainer_2ptm8_5">
      <div class="_inputWrapper_2ptm8_47">
        <span id="searchField-:r11:-srFocus"
              class="_srOnly_2ptm8_190"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:r11:-input"
               class="_input_2ptm8_47"
               autocomplete="off"
               aria-describedby="searchField-:r11:-srFocus"
               type="search"
        >
        <span aria-live="assertive"
              class="_srOnly_2ptm8_190"
        >
        </span>
      </div>
      <button class="_searchButton_2ptm8_109">
        Søk
      </button>
    </div>
    <div id="searchFieldErrorId-:r12:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
  <div id="searchField-:r14:"
       class="_topContainer_2ptm8_13 _topContainer_large_2ptm8_23"
  >
    <label id="searchField-:r14:-label"
           class="_label_348na_5  _srOnly_348na_18"
           for="searchField-:r14:-input"
    >
      Hva leter du etter?
    </label>
    <div class="_searchContainer_2ptm8_5">
      <div class="_inputWrapper_2ptm8_47">
        <span id="searchField-:r14:-srFocus"
              class="_srOnly_2ptm8_190"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:r14:-input"
               class="_input_2ptm8_47"
               autocomplete="off"
               aria-describedby="searchField-:r14:-srFocus"
               type="search"
        >
        <span aria-live="assertive"
              class="_srOnly_2ptm8_190"
        >
        </span>
      </div>
      <button class="_searchButton_2ptm8_109 _searchButton_large_2ptm8_132">
        Søk
      </button>
    </div>
    <div id="searchFieldErrorId-:r15:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
  <div id="searchField-:r17:"
       class="_topContainer_2ptm8_13  _topContainer_extraLarge_2ptm8_30"
  >
    <label id="searchField-:r17:-label"
           class="_label_348na_5  _srOnly_348na_18"
           for="searchField-:r17:-input"
    >
      Hva leter du etter?
    </label>
    <div class="_searchContainer_2ptm8_5">
      <div class="_inputWrapper_2ptm8_47">
        <span id="searchField-:r17:-srFocus"
              class="_srOnly_2ptm8_190"
        >
          Bruk piltaster ned/opp for å velge forslag når de vises
        </span>
        <input id="searchField-:r17:-input"
               class="_input_2ptm8_47"
               autocomplete="off"
               aria-describedby="searchField-:r17:-srFocus"
               type="search"
        >
        <span aria-live="assertive"
              class="_srOnly_2ptm8_190"
        >
        </span>
      </div>
      <button class="_searchButton_2ptm8_109  _searchButton_extraLarge_2ptm8_138">
        Søk
      </button>
    </div>
    <div id="searchFieldErrorId-:r18:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;
